fixed overflow error

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
   scroll-behavior: smooth;
 }
 
-body{
+body >*{
   overflow-x: hidden;
 }
 
